-----------------------------
 Change history for MATPOWER        Mon, Apr 14, 2003
-----------------------------

Version:    2.5b3+

maintained by Ray Zimmerman <rz10@cornell.edu>


Known Bugs
----------

Please report any bugs you find to Ray Zimmerman <rz10@cornell.edu>.

- MathWorks bug: constr in version 1 of the Optimization Toolbox does
  not correctly handle negative lambdas
- identification of binding constraints in printpf.m should
  use OPF_VIOLATION instead of size of MU
- 'area' is the name of an m-file in Matlab 5, my variable 'area'
  masks this m-file


Changes since 2.0
-----------------

4/14/03
	- Fixed a bug in pfsoln.m which for cases with a single generator.

10/23/02
	- Fixed bus numbering bug in System Summary section of printpf.m.

6/20/00
	- Fixed a bug in printpf.m in the generator section, where
	  the generator was assumed to be off if it's real power
	  output was zero, even if the reactive output was non-zero.
	- Modified printpf.m to print out lambdas in generation section
	  for generators that are shut down.

6/8/00
	- Modified cdf2matp.m so that Pd also includes any generation at
	  buses specified as PQ buses. Also modified identification of
	  generator buses to include only PV or reference buses. (Thanks
	  to Venkat)
	- Modified cdf2matp.m so that it always treats the input values
	  for Gs and Bs as per unit values and converts them to actual
	  values expected by MATPOWER (Thanks to D. Devaraj)

version 2.5b3
11/9/99
    - Incorporated changes from Taiyou:
        - Fixed bugs with indexing of lambdas
        - Fixed use of NEWTON_TOL_X, NEWTON_TOL_F, and OPF_VIOLATION in
          termination criteria.
    - Replaced 'mod' with 'rem' in NEWTON_POLY.m and NEWTON_PWL.m to
      make compatible with Matlab 4.

9/22/99
    - Modified grad_*.m to return sparse matrices, unless using
      constr.m or an LP/QP solver that doesn't handle sparse
      matrices. Cleaned up sparse<->full conversions in LPconstr.m,