@@ -26,7 +26,8 @@ Authors:    Ray Zimmerman           <rz10@cornell.edu>
 
             Wed, Dec 24, 1997
 
-Copyright (c) 1997 by Power System Engineering Research Center (PSERC)
+$Id$
+Copyright (c) 1997-2003 by Power System Engineering Research Center (PSERC)
 See http://www.pserc.cornell.edu/ for more info.
 
 
