@@ -30,9 +30,10 @@ function [dSbus_dVm, dSbus_dVa] = dSbus_dV(Ybus, V)
 %              = j * diag(V) * conj(diag(Ibus) - Ybus * diag(V))
 %
 
-%   MATPOWER Version 2.5b3
-%   by Ray Zimmerman, PSERC Cornell    9/19/97
-%   Copyright (c) 1996, 1997 by Power System Engineering Research Center (PSERC)
+%   MATPOWER
+%   $Id$
+%   by Ray Zimmerman, PSERC Cornell
+%   Copyright (c) 1996-2003 by Power System Engineering Research Center (PSERC)
 %   See http://www.pserc.cornell.edu/ for more info.
 
 j = sqrt(-1);
