@@ -5,9 +5,10 @@ function [bus, gen, branch, area] = int2ext(i2e, bus, gen, branch, area)
 %   May be called as [bus, gen, branch] = int2ext(i2e, bus, gen, branch) if
 %   area data is not available/needed.
 
-%   MATPOWER Version 2.5b3
-%   by Ray Zimmerman, PSERC Cornell    9/19/97
-%   Copyright (c) 1997 by Power System Engineering Research Center (PSERC)
+%   MATPOWER
+%   $Id$
+%   by Ray Zimmerman, PSERC Cornell
+%   Copyright (c) 1996-2003 by Power System Engineering Research Center (PSERC)
 %   See http://www.pserc.cornell.edu/ for more info.
 
 %% define names for columns to data matrices
