@@ -6,9 +6,10 @@ function [Ybus, Yf, Yt] = makeYbus(baseMVA, bus, branch)
 %   currents injected into each line from the "from" and "to" buses
 %   respectively of each line. Does appropriate conversions to p.u.
 
-%   MATPOWER Version 2.5b3
-%   by Ray Zimmerman, PSERC Cornell    9/21/99
-%   Copyright (c) 1996-1999 by Power System Engineering Research Center (PSERC)
+%   MATPOWER
+%   $Id$
+%   by Ray Zimmerman, PSERC Cornell
+%   Copyright (c) 1996-2003 by Power System Engineering Research Center (PSERC)
 %   See http://www.pserc.cornell.edu/ for more info.
 
 %% constants
