@@ -6,9 +6,10 @@ function pwlcost = poly2pwl(polycost, Pmin, Pmax, npts)
 %   Pmin <= 0 (such as for reactive power, where P really means Q) it just
 %   uses npts evenly spaced points between Pmin and Pmax.
 
-%   MATPOWER Version 2.5b3
-%   by Ray Zimmerman, PSERC Cornell    9/19/97
-%   Copyright (c) 1997 by Power System Engineering Research Center (PSERC)
+%   MATPOWER
+%   $Id$
+%   by Ray Zimmerman, PSERC Cornell
+%   Copyright (c) 1996-2003 by Power System Engineering Research Center (PSERC)
 %   See http://www.pserc.cornell.edu/ for more info.
 
 [PW_LINEAR, POLYNOMIAL, MODEL, STARTUP, SHUTDOWN, N, COST] = idx_cost;
