@@ -17,9 +17,10 @@ function [MVAbase, bus, gen, gencost, branch, f, success, et] = ...
 %   solvedcase, the solved case will be written to a case file in MATPOWER
 %   format with the specified name with a '.m' extension added.
 
-%   MATPOWER Version 2.5b3
-%   by Ray Zimmerman, PSERC Cornell    9/21/99
-%   Copyright (c) 1996-1999 by Power System Engineering Research Center (PSERC)
+%   MATPOWER
+%   $Id$
+%   by Ray Zimmerman, PSERC Cornell
+%   Copyright (c) 1996-2003 by Power System Engineering Research Center (PSERC)
 %   See http://www.pserc.cornell.edu/ for more info.
 
 %%-----  initialize  -----
