@@ -1,10 +1,12 @@
 -----------------------------
- Change history for MATPOWER        Mon, Apr 14, 2003
+ Change history for MATPOWER
 -----------------------------
 
 Version:    2.5b3+
 
 maintained by Ray Zimmerman <rz10@cornell.edu>
+$Id$
+Copyright (c) 1996-2003 by Power System Engineering Research Center (PSERC)
 
 
 Known Bugs
